Revert commits for Bug 1918365 - switch from react-lazylog to @melloware/react-logviewer for issues
Mentioned issues:
* click on failure line at top does not navigate to line (reproducible)
* sometimes some content areas remain blank (here painted with delay)
* horizontal scrollbar missing

Revert "Bug 1918365 - replace react-lazylog with @melloware/react-logviewer"

This reverts commit 85865f5c06e13af98d6cb544c97a82896057cfd1.
This reverts commit e237b114fbbfe3b36878db81c243142ea3de5393.

--- a/ui/css/lazylog-custom-styles.css
+++ b/ui/css/lazylog-custom-styles.css
@@ -6,12 +6,12 @@
 }
 
 .react-lazylog div:hover {
-  background: transparent !important;
+  background: transparent;
 }
 
 .react-lazylog a:hover {
-  background: #f8eec7 !important;
-  color: #000 !important;
+  background: #f8eec7;
+  color: #000;
 }
 
 .react-lazylog a {
@@ -45,7 +45,7 @@
 }
 
 .react-lazylog-searchbar-filter svg {
-  fill: white !important;
+  fill: white;
 }
 
 .react-lazylog-searchbar-matches {
